# asabaal-utils

./: .gitignore  AI_DEBUGGING_FRAMEWORK.md  CHAT_TEMPLATE.md  CLAUDE.md  CLAUDE_CHAT_INTEGRATION_GUIDE.md  CLAUDE_TOOLS_QUICKSTART.md  DEBUGGING_COLLABORATION_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  FORMAL_TEXT_POSITIONING_ANALYSIS.md  LYRIC_VIDEO_UPDATES.md  MOVIEPY_DEPENDENCY_RESOLUTION.md  QUICK_CHAT_SETUP.md  README.md  README_CLIP_DASHBOARD.md  README_FRAME_EXTRACTOR.md  REALISTIC_CHAT_INTEGRATION.md  TEXT_POSITIONING_DEBUG.ipynb  TODO.md  VISUAL_INTEGRATION_MAP.md  analyze_revelation_playlist.py  build_docs.sh  check_parser.py  check_transcript_processors.py  cli_debug_report.md  create_sample_video.py  debug_actual_render.py  debug_pipeline_io.py  debug_text_rendering.py  debug_word_level.py  fix_script.py  generate_video_clips.sh  generate_vision_video_options.sh  lyric_video_spec.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  repo-diff-script.sh  requirements.txt  (+7 more)
.github/workflows/: tests.yml
budget-utility/: .gitignore  DATA_HANDLING.md  README.md  USAGE.md  index.js  package-lock.json  package.json
budget-utility/cli/: budgetManager.js  promptManager.js
budget-utility/models/: Budget.js  BudgetEntry.js
budget-utility/scripts/: backup-data.js  clean-data.js  load-sample.js
budget-utility/tools/: sampleDataLoader.js
budget-utility/utils/: dataTransformer.js  fileOperations.js
deploy-scripts/: abacus-vm-setup.sh  quick-deploy.sh
docs/: README.md  contributing.md  debug_session_guide.md  index.md  installation.md  quickstart.md
docs/api/: index.md  silence_detector.md  transcript_analyzer.md
docs/cli/: analyze-transcript.md  index.md  remove-silence.md
docs/examples/: silence-removal.md
docs/guides/: memory-optimization.md  transcript-enhancement.md
examples/: debug_tracker_example.py  video_processing_workflow.py
project-management/: .gitignore  README.md  package-lock.json  package.json  start.js
project-management/scripts/: seed-data.js
project-management/src/: app.js  index.js
scripts/: parse_test_logs.py
site/: 404.html  index.html  objects.inv
site/api/: index.html
site/cli/: index.html
site/contributing/: index.html
site/installation/: index.html
site/quickstart/: index.html
src/ai_agent/: ARCHITECTURE.md  README.md  __init__.py  agent.py  monitoring.py  project.py
src/asabaal_utils/: base.py  (+1 more)
src/asabaal_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_training_data/: README.md
tests/: README.md  conftest.py  debug.ipynb  run_all_tests.py  test_base.py  test_capcut_lyric_tool.py  test_debug_utils.py  test_performance.py  test_srt_integration.py  test_syllable_counter.py  test_transcript_converters.py  test_transcript_processors.py
text_debug_output/: debug_report.html
tools/: CLAUDE_INTEGRATION.md  MCP_DEPLOYMENT_GUIDE.md  asabaal_mcp_server.py  church-service-analyzer  church-service-analyzer-simple  claude-tools  claude_client.py  claude_tool_bridge.py  converter_api.py  document_analyzer.py  file_format_converter.py  install-toolmgr.sh  install-tools.sh  pyenv-activator-tool.sh  remove-silence  remove-silence-installed  repo-diff-analysis.sh  repo-full-code.sh  setup_instructions.md  start_claude_bridge.sh  stop_claude_bridge.sh  test_live_integration.py  test_mcp_server.py  toolmgr  tools.sh  video-sample  video-to-audio  youtube-downloader
(+183 files in other folders)
