[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asabaal_utils"
version = "0.0.1"
authors = [{name = "Asabaal Horan", email = "asabaal@asabaalventures.org"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.26.0",
    "opencv-python>=4.5.0",
    "pathspec",
    "yt_dlp",
]

[project.urls]
"Homepage" = "https://github.com/asabaal/asabaal-utils"
"Bug Tracker" = "https://github.com/asabaal/asabaal-utils/issues"

[tool.setuptools.dynamic]
version = {file = "VERSION"}