[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asabaal_utils"
version = "0.0.1"
authors = [{name = "Asabaal Horan", email = "asabaal@asabaalventures.org"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.26.0",
    "moviepy>=1.0.3",
    "numpy>=1.21.0",
    "librosa>=0.9.2",
    "scikit-learn>=1.0.2",
    "scikit-image>=0.19.0",
    "tqdm>=4.62.3",
    "pillow>=9.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0"
]

[project.urls]
"Homepage" = "https://github.com/asabaal/asabaal-utils"
"Bug Tracker" = "https://github.com/asabaal/asabaal-utils/issues"

[project.scripts]
remove-silence = "asabaal_utils.video_processing.cli:remove_silence_cli"
analyze-transcript = "asabaal_utils.video_processing.cli:analyze_transcript_cli"
generate-thumbnails = "asabaal_utils.video_processing.cli:generate_thumbnails_cli"
analyze-colors = "asabaal_utils.video_processing.cli:analyze_colors_cli"
detect-jump-cuts = "asabaal_utils.video_processing.cli:detect_jump_cuts_cli"
create-summary = "asabaal_utils.video_processing.cli:create_summary_cli"
extract-clips = "asabaal_utils.video_processing.cli:extract_clips_cli"
capcut-timeline = "asabaal_utils.video_processing.cli:capcut_timeline_cli"
test-frame-extractor = "asabaal_utils.video_processing.test_frame_extractor:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}